# arcane-codex

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  click-settings.ps1  final-architecture.md  mi_application_story.md  package.json  pre-requirements.md  ralph-config.json  小米Token申请故事.md
.github/: about-settings.md  pull_request_template.md
api-key-vault/: .gitignore  README.md  api-vault-gui.py  swarm_keyctl.py  swarm_keyvault_gui.py  启动API保险箱.bat  启动密钥保险箱.bat
arcane-codex-cli/: HARNESS.md  SKILL.md  arcanecodex.py  setup.py
docs/: cli-interface.md  小米申请-pitch-v1.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
ralph-engine/: README.md  __init__.py  engine.py  pyproject.toml  server.py  test_ralph.py  test_server.py
ralph-engine/core/: __init__.py  dispatcher.py  intent.py  state_machine.py  verifier.py
scripts/: auto-test.ps1  fast-check.ps1  pipeline.ps1  sandbox-setup.ps1  (+1 more)
src-tauri/: Cargo.toml  build.rs  clip_sidecar.py  package-lock.json  package.json  sxstrace.etl  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: crop_icon.py  make_ico.py  placeholder.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  batch.rs  batch_ops.rs  dedup.rs  error_patterns.rs  export.rs  images.rs  inference_settings.rs  mod.rs  narrative.rs  search.rs  settings.rs  tag_correction.rs
src-tauri/src/core/: ai_queue.rs  bk_tree.rs  cache.rs  clip_sidecar.rs  clip_verify.rs  consistency_checker.rs  db.rs  dedup.rs  image.rs  inference.rs  lm_studio.rs  mod.rs  search_index.rs
src-tauri/src/core/calibration/: calibration_curve.rs  ece.rs  mod.rs  types.rs
src-tauri/src/models/: image.rs  mod.rs  task.rs
src-tauri/src/utils/: error.rs  hash.rs  mod.rs
src-tauri/tests/: db_schema_test.rs  migration_test.rs
(+76 files in other folders)
